--- a/LojourProperties.Web/Areas/Main/Pages/Web/Create.cshtml
+++ b/LojourProperties.Web/Areas/Main/Pages/Web/Create.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using static LojourProperties.Domain.Models.Enum;
 @model LojourProperties.Web.Areas.Main.Pages.Web.CreateModel
 
 @{
@@ -39,8 +40,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="WebPage.PagePosition" class="control-label"></label>
-                <select asp-for="WebPage.PagePosition" class="form-control"></select>
-                <span asp-validation-for="WebPage.PagePosition" class="text-danger"></span>
+                        @Html.DropDownListFor(model => model.WebPage.PagePosition, new SelectList(Enum.GetValues(typeof(PagePosition))), new { @class = "form-control" })
+
+                 <span asp-validation-for="WebPage.PagePosition" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
