--- a/LojourProperties.Web/Areas/Main/Pages/Web/Edit.cshtml
+++ b/LojourProperties.Web/Areas/Main/Pages/Web/Edit.cshtml
@@ -18,6 +18,7 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="WebPage.Id" />
+            <input type="hidden" asp-for="WebPage.Key" />
             <div class="form-group">
                 <label asp-for="WebPage.Title" class="control-label"></label>
                 <input asp-for="WebPage.Title" class="form-control" />
@@ -40,8 +41,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="WebPage.PagePosition" class="control-label"></label>
-                <select asp-for="WebPage.PagePosition" class="form-control"></select>
-                <span asp-validation-for="WebPage.PagePosition" class="text-danger"></span>
+                        @Html.DropDownListFor(model => model.WebPage.PagePosition, new SelectList(Enum.GetValues(typeof(LojourProperties.Domain.Models.Enum.PagePosition))), new { @class = "form-control" })
+                        <span asp-validation-for="WebPage.PagePosition" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
