--- a/LojourProperties.Web/Areas/Main/Pages/FaqPage/Details.cshtml
+++ b/LojourProperties.Web/Areas/Main/Pages/FaqPage/Details.cshtml
@@ -34,6 +34,13 @@
                     <dd class="col-sm-10">
                         @Html.DisplayFor(model => model.FAQ.SortOrder)
                     </dd>
+
+                    <dt class="col-sm-2">
+                        @Html.DisplayNameFor(model => model.FAQ.Show)
+                    </dt>
+                    <dd class="col-sm-10">
+                        @Html.DisplayFor(model => model.FAQ.Show)
+                    </dd>
                 </dl>
             </div>
             <div>
