--- a/LojourProperties.Web/Areas/Main/Pages/Web/AdminDelete.cshtml
+++ b/LojourProperties.Web/Areas/Main/Pages/Web/AdminDelete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model LojourProperties.Web.Areas.Main.Pages.Web.DeleteModel
+@model LojourProperties.Web.Areas.Main.Pages.Web.AdminDeleteModel
 
 @{
     ViewData["Title"] = "Delete";
