--- a/LojourProperties.Web/Areas/Main/Pages/Web/Details.cshtml
+++ b/LojourProperties.Web/Areas/Main/Pages/Web/Details.cshtml
@@ -8,7 +8,9 @@
 <div class="card card-default">
     <div class="card-header">
         <h3 class="card-title">DETAILS </h3>
-
+        <br />
+        <br />
+        <h6>Key: @Model.WebPage.Key</h6>
 
     </div>
     <!-- /.card-header -->
@@ -53,7 +55,8 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.WebPage.Publish)
         </dd>
-        <dt class="col-sm-2">
+                    <dt class="col-sm-2">
+                        
             @Html.DisplayNameFor(model => model.WebPage.TextOne)
         </dt>
         <dd class="col-sm-10">
