--- a/LojourProperties.Web/Pages/Shared/Components/Slider/Default.cshtml
+++ b/LojourProperties.Web/Pages/Shared/Components/Slider/Default.cshtml
@@ -1,5 +1,7 @@
 ﻿@model ICollection<LojourProperties.Domain.Models.Slider>
 
+<!-- Master Slider -->
+<div class="master-slider ms-skin-default" id="masterslider">
 
 
 @foreach (var img in Model)
@@ -46,3 +48,5 @@
     <!-- end of slide -->
 }
 
+</div>
+<!-- end Master Slider -->
