--- a/LojourProperties.Web/Areas/Main/Pages/PropertySection/Section/Edit.cshtml
+++ b/LojourProperties.Web/Areas/Main/Pages/PropertySection/Section/Edit.cshtml
@@ -8,7 +8,7 @@
 <div class="card card-default">
     <div class="card-header">
         <h3 class="card-title">UPDATE PROPERTY </h3>
-
+        <h5>Ref. ID: @Model.Property.PropertyRefID</h5>
 
     </div>
     <!-- /.card-header -->
@@ -17,17 +17,14 @@
             <div class="col-md-12">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Property.Id" />
-            <div class="form-group">
+                    <input type="hidden" asp-for="Property.Id" />
+                    <input type="hidden" asp-for="Property.PropertyRefID" />
+             <div class="form-group">
                 <label asp-for="Property.Title" class="control-label"></label>
                 <input asp-for="Property.Title" class="form-control" />
                 <span asp-validation-for="Property.Title" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Property.PropertyRefID" class="control-label"></label>
-                <input asp-for="Property.PropertyRefID" class="form-control" />
-                <span asp-validation-for="Property.PropertyRefID" class="text-danger"></span>
-            </div>
+            
             <div class="form-group">
                 <label asp-for="Property.ShortDescription" class="control-label"></label>
                 <input asp-for="Property.ShortDescription" class="form-control" />
@@ -108,6 +105,19 @@
                 <select asp-for="Property.PropertyTypeId" class="form-control" asp-items="ViewBag.PropertyTypeId"></select>
                 <span asp-validation-for="Property.PropertyTypeId" class="text-danger"></span>
             </div>
+
+                    <div class="form-group">
+                        <label asp-for="Property.PropertyStatus" class="control-label"></label>
+                        @Html.DropDownListFor(model => model.Property.PropertyStatus, new SelectList(Enum.GetValues(typeof(LojourProperties.Domain.Models.Enum.PropertyStatus))), new { @class = "form-control" })
+
+                        <span asp-validation-for="Property.PropertyStatus" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Property.ActivityStatus" class="control-label"></label>
+                        @Html.DropDownListFor(model => model.Property.ActivityStatus, new SelectList(Enum.GetValues(typeof(LojourProperties.Domain.Models.Enum.ActivityStatus))), new { @class = "form-control" })
+
+                        <span asp-validation-for="Property.ActivityStatus" class="text-danger"></span>
+                    </div>
                     <div class="form-group">
                         <input type="submit" value="Submit" class="btn btn-primary" />
                         <a asp-page="./Index" class="btn bg-gradient-warning btn-sm" style="float:right;">Back</a>
